# MCVIO

./: readme.md
MCVIO/: CMakeLists.txt  package.xml
MCVIO/config/: camera_info.yaml  create_mask.py
MCVIO/config/MCVIO/: MCVIO_estimator.yaml  MCVIO_frontend.yaml
MCVIO/config/MCVIO/EuRoC/: MCVIO_EuRoC.yaml  cam_0.yaml  cam_1.yaml
MCVIO/config/MCVIO/cam360/: cam_0.yaml  cam_1.yaml
MCVIO/launch/: MCVIO_VIEW.rviz  MCVIO_estimator.launch  MCVIO_euroc.launch  MCVIO_frontend.launch  vins_combined2.rviz
MCVIO/src/: MCVIOestimator_node.cpp  test_main.cpp  types.h
MCVIO/src/Estimator/: MCVIOestimator.cpp  MCVIOestimator.h  MCVIOfeature_manager.cpp  MCVIOfeature_manager.h  parameters.cpp  parameters.h
MCVIO/src/Estimator/factor/: FrameParameterization.cpp  FrameParameterization.h  SE3AbsolutatePoseFactor.cpp  SE3AbsolutatePoseFactor.h  SE3RelativtePoseFactor.cpp  SE3RelativtePoseFactor.h  imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  projection_factor.h  projection_td_factor.h
MCVIO/src/Estimator/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
MCVIO/src/Frontend/: MCVIOfrontend.cpp  MCVIOfrontend.h  MCVIOfrontend_data.h  sensors.cpp  sensors.h
MCVIO/src/Frontend/feature_tracker/: feature_tracker.cpp  feature_tracker.h  trackerbase.cpp  trackerbase.h  vpi_feature_tracker.cpp  vpi_feature_tracker.h
MCVIO/src/Utils/: EigenTypes.h
MCVIO/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  MapRingBuffer.h  Twist.h  sophus_utils.hpp  tic_toc.h  visualization.cpp  visualization.h
camera_model/: CMakeLists.txt
camera_model/src/: intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/chessboard/: Chessboard.cc
